WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20854
[GTK] Windows can be not realized in ScrollView::update
https://bugs.webkit.org/show_bug.cgi?id=20854
Summary
[GTK] Windows can be not realized in ScrollView::update
Marco Barisione
Reported
2008-09-15 04:44:52 PDT
It make sense to have non-realised windows in ScrollView::update, in this case we should avoid calling gtk functions to avoid critical warnings.
Attachments
Don't call gtk functions on non-realized windows
(1.12 KB, patch)
2008-09-15 05:09 PDT
,
Marco Barisione
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Marco Barisione
Comment 1
2008-09-15 05:09:56 PDT
Created
attachment 23435
[details]
Don't call gtk functions on non-realized windows
Alp Toker
Comment 2
2008-09-16 08:49:02 PDT
Comment on
attachment 23435
[details]
Don't call gtk functions on non-realized windows r=me
Alp Toker
Comment 3
2008-09-16 21:30:32 PDT
Landed in
r36533
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug