2008-09-16  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=20854
        [GTK] Windows can be not realized in ScrollView::update

        Do not call gdk_window_invalidate_rect on a non-realized GtkWidget.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::update):


Canonical link: https://commits.webkit.org/28821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36533 268f45cc-cd09-0410-ab3c-d52691b4dbfc