WebCore/platform/gtk/ScrollViewGtk.cpp
@@ -321,6 +321,9 @@ void ScrollView::update()
 {
     ASSERT(containingWindow());
 
+    if (!containingWindow() || !GTK_WIDGET_REALIZED(containingWindow()))
+        return;
+
     GdkRectangle rect = frameGeometry();
     gdk_window_invalidate_rect(GTK_WIDGET(containingWindow())->window, &rect, true);
 }
